Esqueleto do relatório 4 atualizado

--- a/relatorio4/preambulo.tex
+++ b/relatorio4/preambulo.tex
@@ -126,7 +126,7 @@ bookmarksopen=true, %controls the level of opening in the bookmark
 
 \input{comandos}
 
-\DeclareGraphicsExtensions{.jpg, .pdf, .mps, .png} 
+\DeclareGraphicsExtensions{.jpg, .pdf, .mps, .png, .PNG} 
 
 \renewcommand{\autor}[0]{
     \begin{tabular}{lr}
