--- a/relatorio4/relatorio4.tex
+++ b/relatorio4/relatorio4.tex
@@ -25,7 +25,7 @@ sinal de saída, \emph{saida32\_33} (divide o \emph{clock} por 32 ou 33).
 
 	O esquemático do circuito \emph{prescaler} está representado na \fref{imgQ01schematic}.
 
-	%\img{Esquemático do circuito \emph{prescaler} 32/33}{imgQ01schematic} \\ XXX adicionar figura
+	\img{Esquemático do circuito \emph{prescaler} 32/33}{imgQ01schematic}
 \bigskip
 
 \textbf{2.}	Gere o símbolo para a célula e faça a verificação do esquemático e do símbolo. Certifique-
@@ -59,20 +59,14 @@ aquelas que não estiverem boas. Coloque os \emph{ports} no \emph{layout}, conect
 \textbf{6.}	Faça o \emph{LVS} entre o \emph{layout} e o esquemático. Só devem ocorrer \emph{warnings}. Inclua no relatório 
 o \emph{layout} feito e corrigido.
 
-    O \emph{layout} do circuito está representado na \fref{imgQ04layout}.
+    O \emph{layout} do circuito está representado na \fref{imgQ06layout}.
 
-	%\img{\emph{Layout} do circuito \emph{prescaler} 32/33}{imgQ04layout} \\ XXX adicionar figura
+	\img{\emph{Layout} do circuito \emph{prescaler} 32/33}{imgQ06layout}
 \bigskip
 
 \textbf{7.}	Considere o circuito da \fref{imgQ07usingPrescaler} (não tem função alguma, servindo apenas para 
 ilustração). Desenhe o esquemático desse circuito utilizando a célula \verb:NAND23: e o 
 prescaler anterior (faça as devidas checagens).
-
-	\img{Circuito utilizando o \emph{prescaler}.}{imgQ07usingPrescaler}
-
-	O esquemático do circuito utilizando o \emph{prescaler} está representado na \fref{imgQ07schematic}.
-
-	%\img{Esquemático do circuito utilizando \emph{prescaler} 32/33}{imgQ07schematic} \\ XXX adicionar figura
 \bigskip
 
 \textbf{8.}	Gere o \emph{layout} a partir do esquemático. Para isto não se esqueça de acrescentar ao 
