--- a/relatorio3/relatorio3.tex
+++ b/relatorio3/relatorio3.tex
@@ -186,7 +186,7 @@ Conforme o \emph{report - Windows}, o circuito possui uma área de $681,6 \mu m$.
         \frac{1,67 - 0,04}{960 - 3} = \frac{t_{NAND} - 0,04}{5 - 3}
     \end{equation}
     \begin{equation}
-        t_{min} = min\left(t_{min_1}, t_{min_2}\right)
+        t_{min} = max\left(t_{min_1}, t_{min_2}\right)
     \end{equation}
     Assim sendo, $t_{min} = 0,779 ns$ o que implica uma frequência máxima de \emph{clock} de $1,28 GHz$. \\
 \bigskip
